# dutch

./: .envrc  .gitignore  _quarto.yml  environment.yml  pyproject.toml  requirements.txt
notebooks/: Basic Modeling.ipynb  QuickFs.ipynb  Untitled.ipynb  dividend.ipynb
